Some cleaning up

--- a/notebooks/ukpg_eda_1 [R].ipynb
+++ b/notebooks/ukpg_eda_1 [R].ipynb
@@ -434,6 +434,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bp_nonrenewables_daily_df <- bp_generation_hh_df %>% filter(DateTime_year == 2013) %>% group_by(DateTime_yday) %>% \n",
+    "    summarise(nonrenewable_forecast=(sum(fossils)/12000000)+(sum(nuclears)/12000000)) %>% rename(day=DateTime_yday)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write.csv(bp_nonrenewables_daily_df,  \"./data/bp_nonrenewables_daily_df.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
