--- a/notebooks/OptimizationAlgorithm.ipynb
+++ b/notebooks/OptimizationAlgorithm.ipynb
@@ -19,7 +19,7 @@
       "version": "3.6.5"
     },
     "colab": {
-      "name": "Project.ipynb",
+      "name": "OptimizationAlgorithm.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -105,7 +105,7 @@
         "colab_type": "text"
       },
       "source": [
-        "We assume $N=3$ values of possible states in the teriff plan, and assume $T=365$ time steps. All combinations of state and time can then be represented as a two-dimensional grid of size $N\\times T = 3\\times 365$. A time dependent action value function $Q_t\\left( s_t, a_t\\right)$ with three possible actions, $a_t = \\{a_{\\text{normal_high}}, a_{\\text{normal_low}}, a_{\\text{high_high}}, a_{\\text{high_low}}, a_{\\text{normal}}\\}$, can then be stored as a rank three tensor of dimension $3\\times 365 \\times 5$."
+        "We assume $N=3$ values of possible states in the tariff plan $s_t = \\{s_{\\text{on target}}, s_{\\text{below target}}, s_{\\text{above target}}\\}$, and assume $T=365$ time steps. All combinations of state and time can then be represented as a two-dimensional grid of size $N\\times T = 3\\times 365$. A time dependent action value function $Q_t\\left( s_t, a_t\\right)$ with five possible actions, $a_t = \\{a_{\\text{normal_high}}, a_{\\text{normal_low}}, a_{\\text{high_high}}, a_{\\text{high_low}}, a_{\\text{normal}}\\}$, can then be stored as a rank three tensor of dimension $3\\times 365 \\times 5$."
       ]
     },
     {
@@ -313,6 +313,18 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2YMjXCxsNsxw",
+        "colab_type": "text"
+      },
+      "source": [
+        "Target is to be $\\tau_t \\pm \\alpha \\%$ at any given $t$:\n",
+        "\n",
+        "$\\tau_t = -0.00000000267168*t^3 + 0.0000066387*t^2 + -0.0025185*t + 0.962437$"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "CWvPTEQRi_QH",
@@ -396,18 +408,6 @@
       },
       "source": [
         "#### Setting up the environment"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "2YMjXCxsNsxw",
-        "colab_type": "text"
-      },
-      "source": [
-        "Target is to be $\\tau_t \\pm \\alpha \\%$ at any given $t$:\n",
-        "\n",
-        "$\\tau_t = -0.00000000267168*t^3 + 0.0000066387*t^2 + -0.0025185*t + 0.962437$"
       ]
     },
     {
@@ -693,18 +693,14 @@
         "def sarsa(q_value, expected=False, step_size=ALPHA, eps=EPSILON):\n",
         "    state = START\n",
         "    _, action = choose_action(state, q_value, eps)\n",
-        "    #print(\"%s\\t%s \" % (state, action))\n",
         "    rewards = 0.0\n",
-        "#     print('In sarsa: action = ', action)\n",
-        "    while (state[1] != WORLD_WIDTH-1): #why not start with one  and not(1 <= state[1] <= 10 and state[0]==0)\n",
+        "    while (state[1] != WORLD_WIDTH-1):\n",
         "        next_state, reward = step(state, action)\n",
         "        next_state, next_action = choose_action(next_state, q_value, eps)\n",
-        "        #print(\"%s\\t%s\\t%s \" % (next_state, next_action, reward))\n",
         "        rewards += reward\n",
         "        if not expected:\n",
         "            target = q_value[next_state[0], next_state[1], next_action]\n",
         "        else:\n",
-        "            # calculate the expected value of new state\n",
         "            target = 0.0\n",
         "            q_next = q_value[next_state[0], next_state[1], :]\n",
         "            best_actions = np.argwhere(q_next == np.max(q_next))\n",
@@ -750,11 +746,8 @@
         "    state = START\n",
         "    rewards = 0.0\n",
         "    while state[1] != WORLD_WIDTH-1: # and not(1 <= state[1] <= 10 and state[0]==0)\n",
-        "        #action = choose_action(state, q_value, eps)\n",
         "        next_state, action = choose_action(state, q_value, eps)\n",
-        "        #next_state, action = choose_action(next_state, q_value, eps)\n",
         "        next_state, reward = step(next_state, action)\n",
-        "        #print(\"%s\\t%s\\t%s \" % (state, action, reward))\n",
         "        rewards += reward\n",
         "        # Q-Learning update\n",
         "        q_value[state[0], state[1], action] += step_size * (\n",
@@ -793,15 +786,15 @@
         "            bestAction = np.argmax(q_value[i, j, :])\n",
         "            \n",
         "            if bestAction == ACTION_NORMAL_HIGH:\n",
-        "                optimal_policy[-1].append('N+')\n",
+        "                optimal_policy[-1].append(1) #'N+'\n",
         "            elif bestAction == ACTION_NORMAL_LOW:\n",
-        "                optimal_policy[-1].append('N-')\n",
+        "                optimal_policy[-1].append(-1) #'N-'\n",
         "            elif bestAction == ACTION_HIGH_HIGH:\n",
-        "                optimal_policy[-1].append('H+')\n",
+        "                optimal_policy[-1].append(2) #'H+'\n",
         "            elif bestAction == ACTION_HIGH_LOW:\n",
-        "                optimal_policy[-1].append('H-')\n",
+        "                optimal_policy[-1].append(-2) #'H-'\n",
         "            elif bestAction == ACTION_NORMAL:\n",
-        "                optimal_policy[-1].append('==')     \n",
+        "                optimal_policy[-1].append(0) #  '=='  \n",
         "            \n",
         "    for row in optimal_policy:\n",
         "        print(row)"
@@ -896,14 +889,13 @@
         "# Use multiple runs instead of a single run and a sliding window\n",
         "# With a single run I failed to present a smooth curve\n",
         "# However the optimal policy converges well with a single run\n",
-        "# Sarsa converges to the safe path, while Q-Learning converges to the optimal path\n",
-        "def compare_rl():\n",
+        "\n",
         "    # episodes of each run\n",
-        "    episodes = 5000 #2000\n",
+        "    episodes = 100 #2000\n",
         "    EPOCH = 40\n",
         "\n",
         "    # perform 100 independent runs\n",
-        "    runs = 10 #100\n",
+        "    runs = 1 #100\n",
         "\n",
         "    rewards_sarsa = np.zeros(episodes)\n",
         "    rewards_q_learning = np.zeros(episodes)\n",
@@ -987,6 +979,64 @@
           "metadata": {
             "tags": []
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cl2qgoSz8J2B",
+        "colab_type": "code",
+        "outputId": "4fa1ba80-f363-4e01-febc-f340cca6055a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 105
+        }
+      },
+      "source": [
+        "    print('Sarsa Optimal Policy:')\n",
+        "    print_optimal_policy(q_sarsa)"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Sarsa Optimal Policy:\n",
+            "[0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0, 0, 0, 2, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 2, 0, 2, 2, 0, 0, 2, 2, 0, 0, 2, 2, 0, 0, 0, 0, 2, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, -2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 0, 0, -1, 1, 1, 1, -1, -1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0]\n",
+            "[0, -1, -1, -1, 0, -1, 0, 0, 0, 0, -1, -1, -1, -1, 0, 0, 0, -1, -1, -1, -1, -1, -1, -1, 0, 0, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 0, 0, 0, 0, 0, -1, 0, 0, 0, 0, -1, 0, 0, 0, 0, 0, -1, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1, 0, 0, -1, 0, 0, 0, 0, 0, -1, 0, -1, -1, 0, -1, -1, -1, 0, 0, 0, 0, -1, -1, 0, 0, -1, -1, -1, 0, -1, 1, 0, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 0, 1, -1, 0, 0, 0, 0, 0, 1, -1, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 0, 0, 0, -1, 0, 0, 0, 0, 0, 0, 0, 0, -1, 0, 0, -1, 0, 0, -1, -1, -1, -1, -1, 0, 0, 0, 0, 0, -1, 0, -1, -1, 0, -1, -1, -1, 0, -1, 0, 0, 0, 0, 0, 0, 0, -1, 0, 0, 0, 0, 0, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1, -1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0]\n",
+            "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5A5_HdJ2_iEn",
+        "colab_type": "code",
+        "outputId": "99a4d069-2a61-4fed-cfc2-4ebd2aedb6be",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 105
+        }
+      },
+      "source": [
+        "    print('Q-Learning Optimal Policy:')\n",
+        "    print_optimal_policy(q_q_learning)"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Q-Learning Optimal Policy:\n",
+            "[0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, -1, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, -1, 1, 0, 0, -1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 2, 2, 0, 0, 0, -1, 0, 0, -1, 0, 1, -1, 0, -1, 1, 0, 0]\n",
+            "[0, 0, 0, 0, 0, 0, -1, -1, 0, 0, 0, 0, 0, 0, 0, -1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, -1, 0, -2, -1, 0, 0, 1, 0, 0, 0, -1, 0, 0, 0, 0, -1, 0, -1, 0, 0, -1, 1, 0, 0, 0, -1, 1, 0, 0, 0, 0, 0, 0, 0, -1, 0, 0, 0, 2, 1, 0, 1, -1, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, -1, 1, 1, -1, 0, 0, 0, 1, 1, 0, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, -1, 1, 1, 0, 0, 0, 1, 1, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 0, 0, 1, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 1, 0, 0, 0, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, -1, 0, 0, 0, 0, 0, 1, 1, -1, 0, -1, 0, 1, 2, 1, 1, -1, 1, 1, -1, -1, 1, 0]\n",
+            "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
